# website-rs

./: .gitignore  Cargo.toml  README.md  global-8672a5064f377554.css  index-41541a5da1e239fe.js  index-41541a5da1e239fe_bg.wasm  index-4e90f5efae65a07e.js  index-4e90f5efae65a07e_bg.wasm  index-908b0e2178b5d110.js  index-908b0e2178b5d110_bg.wasm  index-9f307d169a3b015f.js  index-9f307d169a3b015f_bg.wasm  index-9f507292adbbe6c8.js  index-9f507292adbbe6c8_bg.wasm  index-ce35fc3055f77672.js  index-ce35fc3055f77672_bg.wasm  index.html
.github/workflows/: ci.yml
src/: main.rs
src/components/: github.rs  github_link.rs  linkedin.rs  linkedin_link.rs  mod.rs  section.rs  social_media_link.rs  title.rs
src/components/icons/: github.rs  linkedin.rs  mod.rs
