[package]
name = "website-rs"
version = "0.1.0"
edition = "2018"
description = "Personal website"
readme = "README.md"
repository = "https://github.com/btravers/website-rs"
keywords = ["yew", "trink"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.18"
boolinator = "2.4"
derive_more = "0.99"
url = "2.2"
